# AgentWebSearchingTool

./: .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  CLAUDE.md  CODEBUDDY.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cli/: README.md  package-lock.json  package.json
cli/src/: index.ts
cli/tests/: cli.test.ts  integration.test.ts
docs/: CI_CD.md  DESIGN.md  DEVELOPMENT.md  PUBLISH.md  SECURITY.md  overview.md  searxng-api.md  searxng-cleanup.md
engine/: .gitignore  MANIFEST.in  README.md  config.yaml  pyproject.toml  requirements.txt
engine/scripts/: prepare_build.py
engine/src/: __init__.py  config.py  router.py  searxng_runner.py
engine/src/extract/: __init__.py
engine/src/fetch/: __init__.py
engine/src/retrieval/: __init__.py  pipeline.py
engine/src/search/: __init__.py  searxng_provider.py
engine/tests/: __init__.py  test_config.py  test_extract.py  test_fetch.py  test_integration.py  test_retrieval.py  test_router.py  test_search.py
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: client.ts  index.ts  session.ts
mcp-server/src/tools/: fetch.ts  filter.ts  scrape.ts  search.ts
mcp-server/tests/: client.test.ts  integration.test.ts  session.test.ts  tools.test.ts
scripts/: agent-web-search-engine.service  agent-web-search-mcp.service  deploy.sh
