[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-web-search-engine"
version = "0.1.0"
description = "AI Agent web search & intelligent filtering engine — bundled with SearXNG-core"
readme = "README.md"
license = {text = "MIT (engine) / AGPL-3.0-or-later (bundled SearXNG-core)"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    # Web framework
    "fastapi>=0.100",
    "uvicorn>=0.23",
    # HTTP client (also used by bundled SearXNG-core)
    "httpx[http2]>=0.25",
    "httpx-socks>=0.10",
    # Content extraction
    "trafilatura>=1.6",
    "lxml>=5.0",
    "lxml_html_clean>=0.1",
    # Config & data
    "pyyaml>=6.0",
    "numpy>=1.24",
    # SearXNG-core dependencies (Flask-based web app)
    "flask>=3.0",
    "python-dateutil>=2.9",
    "certifi>=2024.0",
    "markdown-it-py>=4.0",
    "msgspec>=0.21",
    "isodate>=0.7",
    "typer>=0.26",
    "typing-extensions>=4.16",
    # SearXNG-core dependencies (synced from searxng_core/requirements.txt)
    "valkey>=6.1",
    "sniffio>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "httpx-socks>=0.10",
]
playwright = [
    "playwright>=1.40",
]
retrieval = [
    "dashscope>=1.14",
    "openai>=1.0",
    "sentence-transformers>=2.2",
    "transformers>=4.36",
    "torch>=2.0",
]

[project.scripts]
agent-web-search-engine = "src.router:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
# Includes the bundled SearXNG-core data in the wheel (AGPL-3.0)
src = ["searxng_core/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
